--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -1,36 +1,15 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the action will run. 
+name: Builder
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  Build:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Create Directory
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          sudo apt install qemu-user-static g++-arm-linux-gnueabihf kpartx aria2 tree python3-requests
+          tree
+          mkdir images && sudo PATH=./node_modules/.bin:$PATH ./builder --noninteractive
+          echo "Folgers in your cup."
+          #touch ../images/.gitkeep
