--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Create Directory
         run: |
           sudo apt install qemu-user-static g++-arm-linux-gnueabihf kpartx aria2 tree python3-requests
-          #tree
+          tree
           #mkdir images && sudo PATH=./node_modules/.bin:$PATH ./builder --noninteractive
           #echo "Folgers in your cup."
           #touch ../images/.gitkeep
