--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -10,6 +10,7 @@ jobs:
         run: |
           sudo apt install qemu-user-static g++-arm-linux-gnueabihf kpartx aria2 tree python3-requests
           tree
+          export GITHUB_KEY={{ secrets.GITHUBKEY }}
           mkdir images && sudo PATH=./node_modules/.bin:$PATH ./builder --noninteractive
           #echo "Folgers in your cup."
           #touch ../images/.gitkeep
